@@ -9,6 +9,7 @@
 	nekoc : added -version which adds Loop opcode and ensure correct $array evaluation order
 	vm : support for bytecode version and new Loop/MakeArray2 opcodes
 	mod_neko/tora : only mix POST with GET params if content-type contains 'urlencoded'
+	mysql5 : added charset support check for escape()
 
 2011-09-10 : 1.8.2
 	vm : use 15 digits (instead of 10) for float display
